--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+/*Para adaptar las imagenes de mi proyecto a la pantalla*/
+img {
+    max-width: 100%;
+}
+
 * { 
     margin: 0;
     padding: 0;
@@ -7,128 +12,153 @@ html {
     font-size: 62.5%;
 }
 
-body {
-       background-color: black;
+.encabezado {
+    background-color: darkslategray;
+    grid-area: header;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-nav {
-    margin-top: 3rem;
-}
-
-ul {
-    list-style: none;
-
-}
-
-.lista-navegacion li {
-    display: inline;
-    font-size: 1.8rem;
-    margin: 100px;
-}
-
-a {
-    text-decoration: none;
-    color: gray;
-    font-family: 'Saira', sans-serif;
-}
-
-h1 {
+.encabezado h1 {
     color: grey;
     font-family: 'Saira', sans-serif;
     font-size: 3rem;
+    margin-top: 10%;
 }
 
-h2 {
+.encabezado h2 {
     color: white;
+    font-family: 'Saira', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 10%;
+}
+
+.menu {
+    background-color: whitesmoke;
+    grid-area: nav;
+}
+
+.menu ul {
+    display: flex; 
+    list-style: none;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+}
+
+.menu ul li a { 
+    text-decoration: none;
+    color: gray;
+    font-family: 'Saira', sans-serif;
+    font-size: 1.5rem;
+}
+
+.cotenido {
+    background-color: black;
+    grid-area: main;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    }
+
+.fotoportada {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.fotoportada img {
+    width: 100%;
+    border: solid 2px black;
+}
+
+.opcionesintro img {
+    grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 800px;
+    height: 300px;
+}
+
+.opcionesintro h2 {
+    color: gray;
     font-family: 'Saira', sans-serif;
     font-size: 2rem;
 }
 
-.foto-backstage {
-    width: 600px;
-    height: 400px;
+.pie {
+    background-color: darkslategray;
+    grid-area: footer;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 10px;
 }
 
-.foto-portada {
-    width: 1800px;
-    height: 1200px;
-}
-
-.foto-galeria {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-opiniones {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-recitales {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-books {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-eventos {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-producto {
-    width: 600px;
-    height: 400px;
-}
-
-.video-youtube {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-deportes {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-quiensoy {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-comotrabajo {
-    width: 600px;
-    height: 400px;
-}
-
-.foto-experiencia {
-    width: 600px;
-    height: 400px;
-}
-
-p {
-    color: white;
-    font-family: 'Saira', sans-serif;
-    font-size: 1.8rem;
-}
-
-.lista-navegacion-abajo li {
-    display: inline;
-    font-size: 1.8rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    margin: 100px;
-}
-
-.p-ultimo-tamanio {
-    font-family: 'Saira', sans-serif;
-    font-size: 0.8rem;
-    }
-
-.imagen-ultima {
+.pie img {
     width: 80px;
     height: 80px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 }
+.grid-container {
+    width: 80%;
+    margin: 0 auto;
+    color: grey;
+    font-family: 'Saira', sans-serif;
+    display: grid;
+    background-color: black;
+    grid-template-columns: 1fr 1fr 1fr; /*Puedo agregar la funcion repeat; en lugar de poner 1fr 1fr 1fr; pongo repeat (3) 1fr*/ 
+    grid-template-rows: 90px 25px auto 90px;
+    grid-template-areas: 
+    "header header header"
+    "nav nav nav"
+    "main main main"
+    "footer footer footer";
+}
+
+/*Media query*/
+@media screen and (max-width 1050px){
+    .encabezado {
+        flex-direction: column;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+    .grid-container { 
+        width: 100%;
+        margin: 0;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 90px 25px auto 90px;
+        grid-template-areas: 
+        "header header"
+        "nav nav"
+        "main main"
+        "footer footer";
+    }
+}
+
+@media screen and (max-width 580px){
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 90px 250px auto 90px;
+        grid-template-areas: 
+        "header"
+        "nav"
+        "main"
+        "footer";
+    }
+}
+
+
+
+
+
+
+
+
+
+
