--- a/css/styles.css
+++ b/css/styles.css
@@ -1,126 +1,130 @@
-/*Para adaptar las imagenes de mi proyecto a la pantalla*/
-img {
-    max-width: 100%;
-}
-
-* { 
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 62.5%;
-}
-
+/*variable colores del encabezado*/
 .encabezado {
-    background-color: darkslategray;
-    grid-area: header;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.encabezado h1 {
+  background-color: darkslategray;
+  grid-area: header;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .encabezado h1 {
     color: grey;
     font-family: 'Saira', sans-serif;
     font-size: 3rem;
-    margin-top: 10%;
-}
-
-.encabezado h2 {
+    margin-top: 10%; }
+  .encabezado h2 {
     color: white;
     font-family: 'Saira', sans-serif;
     font-size: 2rem;
-    margin-bottom: 10%;
+    margin-bottom: 10%; }
+
+/*Para adaptar las imagenes de mi proyecto a la pantalla*/
+img {
+  max-width: 100%; 
 }
 
-.menu {
-    background-color: whitesmoke;
-    grid-area: nav;
+* {
+  margin: 0;
+  padding: 0; 
 }
 
-.menu ul {
-    display: flex; 
-    list-style: none;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-}
+html {
+  font-size: 62.5%;
+ }
 
-.menu ul li a { 
-    text-decoration: none;
-    color: gray;
-    font-family: 'Saira', sans-serif;
-    font-size: 1.5rem;
-}
-
-.cotenido {
-    background-color: black;
-    grid-area: main;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    }
-
-.fotoportada {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.fotoportada img {
-    width: 100%;
-    border: solid 2px black;
-}
-
-.opcionesintro img {
-    grid-area: main;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 800px;
-    height: 300px;
-}
-
-.opcionesintro h2 {
-    color: gray;
-    font-family: 'Saira', sans-serif;
-    font-size: 2rem;
-}
-
-.pie {
-    background-color: darkslategray;
-    grid-area: footer;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-bottom: 10px;
-}
-
-.pie img {
-    width: 80px;
-    height: 80px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-}
-.grid-container {
-    width: 80%;
-    margin: 0 auto;
+.encabezado {
+  background-color: #305050;
+  grid-area: header;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .encabezado h1 {
     color: grey;
     font-family: 'Saira', sans-serif;
-    display: grid;
-    background-color: black;
-    grid-template-columns: 1fr 1fr 1fr; /*Puedo agregar la funcion repeat; en lugar de poner 1fr 1fr 1fr; pongo repeat (3) 1fr*/ 
-    grid-template-rows: 90px 25px auto 90px;
-    grid-template-areas: 
-    "header header header"
-    "nav nav nav"
-    "main main main"
-    "footer footer footer";
-}
+    font-size: 3rem;
+    margin-top: 10%; }
+  .encabezado h2 {
+    color: white;
+    font-family: 'Saira', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 10%; }
 
-/*Media query*/
+.menu {
+  background-color: whitesmoke;
+  grid-area: nav; }
+
+.menu ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%; }
+
+.menu ul li a {
+  text-decoration: none;
+  color: gray;
+  font-family: 'Saira', sans-serif;
+  font-size: 1.5rem; }
+
+.cotenido {
+  background-color: black;
+  grid-area: main;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); }
+
+.fotoportada {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); }
+
+.fotoportada img {
+  width: 100%;
+  border: solid 2px black; }
+
+.opcionesintro img {
+  grid-area: main;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 800px;
+  height: 300px; }
+
+.opcionesintro h2 {
+  color: gray;
+  font-family: 'Saira', sans-serif;
+  font-size: 2rem; }
+
+.pie {
+  background-color: darkslategray;
+  grid-area: footer;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 10px; }
+
+.pie img {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: left;
+  align-items: center; }
+
+.grid-container {
+  width: 80%;
+  margin: 0 auto;
+  color: grey;
+  font-family: 'Saira', sans-serif;
+  display: grid;
+  background-color: black;
+  grid-template-columns: 1fr 1fr 1fr;
+  /*Puedo agregar la funcion repeat; en lugar de poner 1fr 1fr 1fr; pongo repeat (3) 1fr*/
+  grid-template-rows: 90px 25px auto 90px;
+  grid-template-areas: "header header header"
+ "nav nav nav"
+ "main main main"
+ "footer footer footer"; }
+
+/*Media query
 @media screen and (max-width 1050px){
     .encabezado {
         flex-direction: column;
@@ -152,13 +156,4 @@ html {
         "footer";
     }
 }
-
-
-
-
-
-
-
-
-
-
+*/
